chat_example_with_socketio/src/main/java/com/example/chat_example_with_socketio/error/ErrorResponse.java
package com.example.chat_example_with_socketio.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ErrorResponse {
    private int status;
    private String message;
}
